--- a/cloud/functions/addblog/package.json
+++ b/cloud/functions/addblog/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "idcard",
+  "name": "addblog",
   "version": "1.0.0",
-  "description": "",
+  "description": "add blog",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
