--- a/project.config.json
+++ b/project.config.json
@@ -16,8 +16,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.1.0",
-	"appid": "<%=mpappid%>",
-	"projectname": "<%=project%>",
+	"appid": "",
+	"projectname": "blog",
 	"isGameTourist": false,
 	"miniprogramRoot": "client",
 	"cloudfunctionRoot": "cloud/functions",
