--- a/cloud/functions/addblog/package.json
+++ b/cloud/functions/addblog/package.json
@@ -9,6 +9,6 @@
   "author": "heyli",
   "license": "MIT",
   "dependencies": {
-    "tcb-admin-node": "^1.0.17"
+    "wx-server-sdk": "0.0.8"
   }
 }
